<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="Projetos"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="@color/azul_personalizado"
        android:text="Voltar" />


    <!-- Layout Horizontal para GitHub -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/git" />

        <TextView
            android:id="@+id/myprofile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myprofile_link"
            android:textColor="@color/azul_personalizado"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/git" />

        <TextView
            android:id="@+id/agenda_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agenda_link"
            android:textColor="@color/azul_personalizado"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/git" />

        <TextView
            android:id="@+id/imc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_link"
            android:textColor="@color/azul_personalizado"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="start" />

    </LinearLayout>

</LinearLayout>